--- a/beers/Dockerfile
+++ b/beers/Dockerfile
@@ -9,7 +9,7 @@ RUN pip install --no-cache-dir -r /usr/src/app/requirements.txt
 COPY web_app/ /usr/src/app/
 
 # tell the port number the container should expose
-EXPOSE 5000
+#EXPOSE 5000
 
 # run the application
 CMD ["python", "/usr/src/app/app.py"]
